force-app/main/default/objects/Contact/fields/AV_CIA__c.field-meta.xml
<CustomField>
    <fullName>AV_CIA__c</fullName>
    <description>Sociedad / Compañía del empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sociedad / Compañía</label>
    <length>255</length>
    <type>Text</type>
</CustomField>