force-app/main/default/objects/Contact/fields/AV_CodFuncion__c.field-meta.xml
<CustomField>
    <fullName>AV_CodFuncion__c</fullName>
    <description>Código de la función del empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Función</label>
    <length>255</length>
    <type>Text</type>
</CustomField>