force-app/main/default/objects/Contact/fields/AV_CodPosicion__c.field-meta.xml
<CustomField>
    <fullName>AV_CodPosicion__c</fullName>
    <description>Código de la posición del empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Posición</label>
    <length>255</length>
    <type>Text</type>
</CustomField>