force-app/main/default/objects/Contact/fields/AV_DescFuncion__c.field-meta.xml
<CustomField>
    <fullName>AV_DescFuncion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Función detalle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>