force-app/main/default/objects/Contact/fields/AV_EmpleadoIntouch__c.field-meta.xml
<CustomField>
    <fullName>AV_EmpleadoIntouch__c</fullName>
    <formula>Account.CC_Tipo_Oficina__c = &apos;I&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Es Intouch</label>
    <type>Checkbox</type>
</CustomField>