force-app/main/default/objects/Contact/fields/AV_FechaAltaFuncion__c.field-meta.xml
<CustomField>
    <fullName>AV_FechaAltaFuncion__c</fullName>
    <description>Fecha de alta en la función que desempeña el empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de alta función</label>
    <type>Date</type>
</CustomField>