force-app/main/default/objects/Contact/fields/AV_NivelAutorizacion__c.field-meta.xml
<CustomField>
    <fullName>AV_NivelAutorizacion__c</fullName>
    <description>Nivel de autorización del empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Nivel de autorización</label>
    <length>255</length>
    <type>Text</type>
</CustomField>