force-app/main/default/objects/Contact/fields/AV_NumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroDocumento__c</fullName>
    <formula>Account.CC_Numero_Documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Documento</label>
    <type>Text</type>
</CustomField>