force-app/main/default/objects/Contact/fields/AV_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>AV_NumPerso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NumPerson</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>