force-app/main/default/objects/Contact/fields/AV_Pool__c.field-meta.xml
<CustomField>
    <fullName>AV_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para indicar si un empleado pertenece al pool</description>
    <label>Pool BPA</label>
    <type>Checkbox</type>
</CustomField>