force-app/main/default/objects/Contact/fields/AV_Rol__c.field-meta.xml
<CustomField>
    <fullName>AV_Rol__c</fullName>
    <description>Rol del empleado</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>