force-app/main/default/objects/Contact/fields/AV_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>AV_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Supervisor)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>