force-app/main/default/objects/Contact/fields/AV_TipoGestor__c.field-meta.xml
<CustomField>
    <fullName>AV_TipoGestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo gestor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>