force-app/main/default/objects/Contact/fields/AV_UsuarioAsociado__c.field-meta.xml
<CustomField>
    <fullName>AV_UsuarioAsociado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Asociado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>