force-app/main/default/objects/Contact/fields/CBSD_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>CBSD_Nacionalidad__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>País (NIF)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>