force-app/main/default/objects/Contact/fields/CC_Cargo__c.field-meta.xml
<CustomField>
    <fullName>CC_Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>DIRECCIÓN</fullName>
            </value>
            <value>
                <fullName>SUBDIRECCIÓN</fullName>
            </value>
            <value>
                <fullName>DIRECCIÓN ÁREA DE NEGOCIO</fullName>
            </value>
            <value>
                <fullName>AGENTE FINANCIERO</fullName>
            </value>
            <value>
                <fullName>GENERICO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>