force-app/main/default/objects/Contact/fields/CC_CargoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CC_CargoRepresentante__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cargo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>