force-app/main/default/objects/Contact/fields/CC_CuentaFacebook__c.field-meta.xml
<CustomField>
    <fullName>CC_CuentaFacebook__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cuenta de Facebook</label>
    <length>24</length>
    <type>Text</type>
</CustomField>