force-app/main/default/objects/Contact/fields/CC_CuentaRepresentada__c.field-meta.xml
<CustomField>
    <fullName>CC_CuentaRepresentada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta representada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Representantes</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>