force-app/main/default/objects/Contact/fields/CC_CuentaTwitter__c.field-meta.xml
<CustomField>
    <fullName>CC_CuentaTwitter__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cuenta de Twitter</label>
    <length>15</length>
    <type>Text</type>
</CustomField>