force-app/main/default/objects/Contact/fields/CC_EmpleadoGestorId__c.field-meta.xml
<CustomField>
    <fullName>CC_EmpleadoGestorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado gestor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.CC_OficinaGestoraId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gestores</relationshipLabel>
    <relationshipName>Gestores</relationshipName>
    <type>Lookup</type>
</CustomField>