force-app/main/default/objects/Contact/fields/CC_External__c.field-meta.xml
<CustomField>
    <fullName>CC_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External</label>
    <length>30</length>
    <type>Text</type>
</CustomField>