force-app/main/default/objects/Contact/fields/CC_FechaDefuncion__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaDefuncion__c</fullName>
    <description>Fecha de defunción de la persona.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha de defunción de la persona.</inlineHelpText>
    <label>Fecha de defunción</label>
    <type>Date</type>
</CustomField>