force-app/main/default/objects/Contact/fields/CC_FechaNac__c.field-meta.xml
<CustomField>
    <fullName>CC_FechaNac__c</fullName>
    <description>Fecha de nacimiento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha de nacimiento</inlineHelpText>
    <label>Fecha nacimiento</label>
    <type>Date</type>
</CustomField>