force-app/main/default/objects/Contact/fields/CC_Identificador__c.field-meta.xml
<CustomField>
    <fullName>CC_Identificador__c</fullName>
    <formula>IF(RecordType.DeveloperName == &apos;CC_Empleado&apos;, CC_Matricula__c,  CC_Numero_Documento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificador</label>
    <type>Text</type>
</CustomField>