force-app/main/default/objects/Contact/fields/CC_Identificador_CBKNow__c.field-meta.xml
<CustomField>
    <fullName>CC_Identificador_CBKNow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identificador CBKNow</label>
    <length>50</length>
    <type>Text</type>
</CustomField>