force-app/main/default/objects/Contact/fields/CC_Inactivo__c.field-meta.xml
<CustomField>
    <fullName>CC_Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactivo</label>
    <type>Checkbox</type>
</CustomField>