force-app/main/default/objects/Contact/fields/CC_Matricula__c.field-meta.xml
<CustomField>
    <fullName>CC_Matricula__c</fullName>
    <description>Campo Matricula del empleado.
Cuando un empleado esté activo este campo será de 8 caracteres con el código U01 del empleado.
Cuando un empleado no se encuentre activo este campo será de 31 caracteras con el siguiente formato:
MATRICULA + - + YYYYMMDDHHMMSS + &quot;-INVALID&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Matrícula</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>