force-app/main/default/objects/Contact/fields/CC_MIG_ACC_CON_OWNER__c.field-meta.xml
<CustomField>
    <fullName>CC_MIG_ACC_CON_OWNER__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MIG_ACC_CON_OWNER</label>
    <type>Checkbox</type>
</CustomField>