force-app/main/default/objects/Contact/fields/CC_MIG_ACC_CON_OWNERID__c.field-meta.xml
<CustomField>
    <fullName>CC_MIG_ACC_CON_OWNERID__c</fullName>
    <formula>IF(OwnerId=Account.OwnerId , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MIG_ACC_CON_OWNERID</label>
    <type>Checkbox</type>
</CustomField>