force-app/main/default/objects/Contact/fields/CC_Num_Empleado_Generico__c.field-meta.xml
<CustomField>
    <fullName>CC_Num_Empleado_Generico__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Número empleado generico</label>
    <length>10</length>
    <type>Text</type>
</CustomField>