force-app/main/default/objects/Contact/fields/CC_Numero_Oficina__c.field-meta.xml
<CustomField>
    <fullName>CC_Numero_Oficina__c</fullName>
    <formula>Account.CC_Numero_Oficina__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Oficina</label>
    <type>Text</type>
</CustomField>