force-app/main/default/objects/Contact/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>NumPerso</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>