force-app/main/default/objects/Contact/fields/CC_NumPersoAsoc__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPersoAsoc__c</fullName>
    <description>NumPerso asociado al contacto (para gestión de empresas y ALF)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>NumPerso asociado al contacto (para gestión de empresas y ALF)</inlineHelpText>
    <label>NumPerso Asociado</label>
    <length>15</length>
    <type>Text</type>
</CustomField>