force-app/main/default/objects/Contact/fields/CC_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>CC_Observaciones__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Observaciones</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>