force-app/main/default/objects/Contact/fields/CC_Sexo__c.field-meta.xml
<CustomField>
    <fullName>CC_Sexo__c</fullName>
    <description>Género del contacto</description>
    <inlineHelpText>Género del contacto</inlineHelpText>
    <label>Sexo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sexo</valueSetName>
    </valueSet>
</CustomField>