force-app/main/default/objects/Contact/fields/CC_TipoRepresentante__c.field-meta.xml
<CustomField>
    <fullName>CC_TipoRepresentante__c</fullName>
    <label>Tipo representante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apoderado</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
            <value>
                <fullName>Representante legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>