force-app/main/default/objects/Contact/fields/CIBE_ApoderadosId__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ApoderadosId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id Apoderados</label>
    <length>36</length>
    <type>Text</type>
</CustomField>