force-app/main/default/objects/Contact/fields/CIBE_AsistenteNoRegistrado__c.field-meta.xml
<CustomField>
    <fullName>CIBE_AsistenteNoRegistrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asistente no registrado</label>
    <type>Checkbox</type>
</CustomField>