force-app/main/default/objects/Contact/fields/CIBE_Canales__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Canales__c</fullName>
    <description>Canales a los que aplica</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Canales</label>
    <length>50</length>
    <type>Text</type>
</CustomField>