force-app/main/default/objects/Contact/fields/CIBE_Cargoemail4__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Cargoemail4__c</fullName>
    <label>Cargo email 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIBE_CargoContactoEmpresa</valueSetName>
    </valueSet>
</CustomField>