force-app/main/default/objects/Contact/fields/CIBE_CargoTelefono2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CargoTelefono2__c</fullName>
    <label>Cargo Telefono 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIBE_CargoContactoEmpresa</valueSetName>
    </valueSet>
</CustomField>