force-app/main/default/objects/Contact/fields/CIBE_Carrec__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Carrec__c</fullName>
    <label>Cargo Apoderado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIBE_CarrecContactoEmpresa</valueSetName>
    </valueSet>
</CustomField>