force-app/main/default/objects/Contact/fields/CIBE_CategoriaEmail1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CategoriaEmail1__c</fullName>
    <label>Categoria Email 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIBE_CategoriaContacto</valueSetName>
    </valueSet>
</CustomField>