force-app/main/default/objects/Contact/fields/CIBE_CategoriaEmail4__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CategoriaEmail4__c</fullName>
    <label>Categoria Email 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIBE_CategoriaContacto</valueSetName>
    </valueSet>
</CustomField>