force-app/main/default/objects/Contact/fields/CIBE_CategoriaTelefono10__c.field-meta.xml
<CustomField>
    <fullName>CIBE_CategoriaTelefono10__c</fullName>
    <label>Categoria del telefono 10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CIBE_CategoriaContacto</valueSetName>
    </valueSet>
</CustomField>