force-app/main/default/objects/Contact/fields/CIBE_Confidencial__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Confidencial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidencial</label>
    <type>Checkbox</type>
</CustomField>