force-app/main/default/objects/Contact/fields/CIBE_ContactoInfoComercial__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ContactoInfoComercial__c</fullName>
    <defaultValue>true</defaultValue>
    <description>El contacto acepta información comercial</description>
    <label>Acepta comunicaciones comerciales</label>
    <type>Checkbox</type>
</CustomField>