force-app/main/default/objects/Contact/fields/CIBE_ContactopersonasjuridicasEmail3__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ContactopersonasjuridicasEmail3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contacto para personas juridicas Email 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>