force-app/main/default/objects/Contact/fields/CIBE_ContactoPersonasJuridicasT1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ContactoPersonasJuridicasT1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contacto para personas juridicas Tlf 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>