force-app/main/default/objects/Contact/fields/CIBE_ContactoPersonasJuridicasT2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ContactoPersonasJuridicasT2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contacto para personas juridicas Tlf 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>