force-app/main/default/objects/Contact/fields/CIBE_ContactoProvisional__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ContactoProvisional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacto provisional</label>
    <type>Checkbox</type>
</CustomField>