force-app/main/default/objects/Contact/fields/CIBE_DatosdeEscritura1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DatosdeEscritura1__c</fullName>
    <description>Texto para datos de escritura</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Datos de Escritura 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>