force-app/main/default/objects/Contact/fields/CIBE_DireccionElectronica1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DireccionElectronica1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direccion Electronica 1</label>
    <type>Email</type>
</CustomField>