force-app/main/default/objects/Contact/fields/CIBE_DireccionElectronica2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DireccionElectronica2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direccion Electronica 2</label>
    <type>Email</type>
</CustomField>