force-app/main/default/objects/Contact/fields/CIBE_DireccionElectronica4__c.field-meta.xml
<CustomField>
    <fullName>CIBE_DireccionElectronica4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Direccion Electronica 4</label>
    <type>Email</type>
</CustomField>