force-app/main/default/objects/Contact/fields/CIBE_Empresa__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Empresa__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; &amp; AccountId,
  Account.Name,
  &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empresa</label>
    <type>Text</type>
</CustomField>