force-app/main/default/objects/Contact/fields/CIBE_Extension10__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Extension10__c</fullName>
    <label>Extension 10</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>