force-app/main/default/objects/Contact/fields/CIBE_Extension2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Extension2__c</fullName>
    <label>Extension 2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>