force-app/main/default/objects/Contact/fields/CIBE_FechaAltaEmail2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaAltaEmail2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de alta email 2</label>
    <type>Date</type>
</CustomField>