force-app/main/default/objects/Contact/fields/CIBE_FechaAltaTelefono1__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaAltaTelefono1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de alta del telefono 1</label>
    <type>Date</type>
</CustomField>