force-app/main/default/objects/Contact/fields/CIBE_FechaAltaTelefono4__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaAltaTelefono4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de alta del telefono 4</label>
    <type>Date</type>
</CustomField>