force-app/main/default/objects/Contact/fields/CIBE_FechaAltaTelefono7__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaAltaTelefono7__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de alta del telefono 7</label>
    <type>Date</type>
</CustomField>