force-app/main/default/objects/Contact/fields/CIBE_FechaVencimiento__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaVencimiento__c</fullName>
    <description>Fecha de vencimiento</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de Vencimiento</label>
    <type>Date</type>
</CustomField>