force-app/main/default/objects/Contact/fields/CIBE_Manager__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se marcará cuando se quiera indicar que el empleado es Manager</description>
    <label>Manager</label>
    <type>Checkbox</type>
</CustomField>