force-app/main/default/objects/Contact/fields/CIBE_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CIBE_NumPerso__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIBE NumPerso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>