force-app/main/default/objects/Contact/fields/CIBE_Prefijo2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Prefijo2__c</fullName>
    <label>Prefijo 2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>