force-app/main/default/objects/Contact/fields/CIBE_Prefijo3__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Prefijo3__c</fullName>
    <label>Prefijo 3</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>