force-app/main/default/objects/Contact/fields/CIBE_Prefijo4__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Prefijo4__c</fullName>
    <label>Prefijo 4</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>