force-app/main/default/objects/Contact/fields/CIBE_PrioridadEmail2__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PrioridadEmail2__c</fullName>
    <label>Prioridad del email 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>