force-app/main/default/objects/Contact/fields/CIBE_PrioridadEmail5__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PrioridadEmail5__c</fullName>
    <label>Prioridad del email 5</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>