force-app/main/default/objects/Contact/fields/CIBE_PrioridadTelefono3__c.field-meta.xml
<CustomField>
    <fullName>CIBE_PrioridadTelefono3__c</fullName>
    <label>Prioridad del telefono 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>